--- a/imageupload/requirements.txt
+++ b/imageupload/requirements.txt
@@ -1,7 +1,7 @@
 atomicwrites==1.3.0
 attrs==19.1.0
 colorama==0.4.1
-Django==2.2.8
+django>=2.2.13
 django-cors-headers==3.1.0
 djangorestframework==3.10.3
 factory-boy==2.12.0
